# tma-frequency

./: Dockerfile  README.md  compose.yaml  pyproject.toml
src/tma/: __main__.py
src/tma/core/: database.py  settings.py
src/tma/core/data/: data_analyzer.py
src/tma/core/data/parser/: parser.py
src/tma/core/model/: init.sql
src/tma/core/model/models/: curie_point.py  measurement.py  measurement_data.py  sample.py  specimen_item.py  user.py
src/tma/core/model/repository/: __init__.py  curie_point_repository.py  measurement_data_repository.py  measurement_repository.py  sample_repository.py  specimen_item_repository.py  user_repository.py
src/tma/core/service/entrypoit/: file.py
src/tma/core/service/exceptions/: parameter_error.py  (+2 more)
src/tma/multipages/: __init__.py
src/tma/multipages/Data_Overview/: __init__.py
src/tma/multipages/Edit_Data/: __init__.py
src/tma/multipages/Edited_Data_View/: __init__.py
src/tma/multipages/Magnetic_Thresholds/: __init__.py
src/tma/multipages/Visual_Editor/: __init__.py
tests/: test.py
tests/analysis/correction/: generate_files.py  subtraction_constant.py  subtraction_files.py  time_test_subtraction_test.py
tests/analysis/outline_points/: diff_previous_value.py  mean_outline_detect.py
tests/analysis/susceptibility/: bulk_calculation.py  mass_calculation.py  time_test_bulk.py
tests/files/: VF03_H1O.cur  VF03_L1.clw  VF03_L2.clw
tests/models/: test_curie_points_service.py  test_measurement_data_service.py  test_measurement_service.py  test_sample_service.py  test_specimen_item_service.py  test_user_service.py
(+103 files in other folders)
